CMAKE_MINIMUM_REQUIRED (VERSION 3.5.1) 
MESSAGE(STATUS "CMAKE VERSION ${CMAKE_VERSION}")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/../cmake ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${HIP_PATH}/cmake ${MIOPEN_PATH}/lib/cmake/miopen)

execute_process(COMMAND ${HIP_PATH}/bin/hipconfig --platform OUTPUT_VARIABLE HIP_PLATFORM)
MESSAGE (STATUS "HIP_PATH : ${HIP_PATH}")

#Make sure HIP is installed in the target system
FIND_PACKAGE(HIP 1.0 REQUIRED)
SET(CMAKE_CXX_COMPILER "${HIP_PATH}/bin/hipcc")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../library/include   ${HIP_PATH}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/utils/)
FILE(GLOB HIPDNNTESTSRCS "${CMAKE_CURRENT_SOURCE_DIR}/utils/src/*.cc" ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
INCLUDE_DIRECTORIES(${MIOPEN_PATH}/include/)
INCLUDE_DIRECTORIES(${CUDNN_PATH}/include/)
ADD_EXECUTABLE(unittest ${HIPDNNTESTSRCS})
set_target_properties(unittest PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(unittest PROPERTIES LINK_FLAGS "-L /usr/local/cuda-9.0/lib64 -L /opt/rocm/hipDNN/lib/  -L /opt/rocm/miopen/lib")
TARGET_LINK_LIBRARIES(unittest PUBLIC hipDNN MIOpen pthread)